yep i almost fixed it but i do not think i have a clue nvm there just the contact form whose position should be shifted from centre to exactly under contact header

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
 }
 .main_container {
   display: flex;
-  height: calc(100vh - 72px);
+  height: 100vh;
   flex-direction: column;
   justify-content: end;
 }
