--- a/src/components/ContactHeader/ContactHeader.module.css
+++ b/src/components/ContactHeader/ContactHeader.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   
 
-  align-items: center;
+  align-items: baseline;
   
   
   
@@ -12,14 +12,14 @@
 }
 
 .contact_section h1 {
-  font-size: 18px;
+  font-size: 48px;
   font-weight: 800;
-  max-width: 45%;
-  margin-top: 118px;
+  max-width: 35%;
+  
 }
 .contact_section p {
-  font-size: 13px;
-  font-weight: 500;
-  line-height: 1.5;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1;
   max-width: 35%;
 }
